# Covalt

./: .cursorrules  .envrc  .gitattributes  .gitignore  AGENTS.md  CLA.md  COMMERCIAL-LICENSING.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  NOTICE  QUICKSTART.md  README.md  TRADEMARKS.md  agno_usage_docs.md  bunfig.toml  electrobun.config.ts  electron-builder.yml  eslint.config.mjs  index.html  main.py  next.config.ts  nuitka-crash-report.xml  package.json  playwright.config.ts  pyproject.toml  test.py  tsconfig.json  tsconfig.tsbuildinfo  vite-env.d.ts  vite.config.ts  vitest.config.mts
.factory/: init.sh  services.yaml
.gemini/: settings.json
.github/: CODEOWNERS
.github/signatures/: cla.json
.github/workflows/: build.yml  cla.yml  lint.yml  test.yml
agno-toolset/: README.md  pyproject.toml
app/: fonts.css  globals.css  layout.tsx  main.tsx
app/(app)/: layout.tsx  page.tsx
app/(chat)/: layout.tsx  page.tsx
app/components/: AdvancedOptionsPopover.tsx  ArtifactFileEditorFrame.tsx  AttachmentPreview.tsx  Chat.tsx  ChatInputForm.tsx  ChatItem.tsx  ChatMessage.tsx  (+27 more)
backend/: __init__.py  config.py  crypto.py  main.py
contracts/: runtime-events.v1.json
covalt-toolset/: README.md  pyproject.toml
covalt-toolset/src/covalt_toolset/: __init__.py  schema.py
docs/: architecture-redesign-todo.md  creating-plugins.md  generic-runtime-target-architecture.md  graph-runtime-system-thinking.md  graph-runtime-unification-plan.md  mcp_config.md  node-system-v2-spec.md  remaining-features.md  toolset-mcp-unification.md  toolset-system-spec.md  workspace-file-sync.md
electron/: main.js  preload.js
nodes/: __init__.py  _coerce.py  _droid_renderer_config.py  _expressions.py  _manifest.ts  _registry.py  _registry.ts  _renderers.py  _types.py  _types.test.ts  _types.ts  _variables.py  _variables.ts  manifest.ts  node_type_ids.py  plugin.py
poc/: IMPLEMENTATION.md  architecture.md  data-spine-prd.md  flow-control-nodes.md  generic-runtime-refactor-plan.md  node-plugin-implementation.md  node.md  parameter-driven-architecture.md  trigger-execution-model.md
scripts/: build-backend.ps1  build-backend.sh  generate-runtime-events.ts  generate_milestone_a_baseline.py  md4w-probe.ts  ruff_debt_report.py  snapshot-stream.ts
src/: App.tsx
src-tauri/: Cargo.toml  pyproject.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/python/tauri_app/: __init__.py  __main__.py  config.py  db.py  functions.py  types.py
src-tauri/python/tauri_app.egg-info/: PKG-INFO
src-tauri/python/tauri_app/commands/: __init__.py  branches.py  chats.py  streaming.py  system.py
src-tauri/python/tauri_app/db/: migrations.py  models.py
src-tauri/python/tauri_app/models/: chat.py
src-tauri/python/tauri_app/services/: agent_factory.py  model_factory.py  tool_registry.py
src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  provider_plugin_test_helpers.py  test_agent_executor_messages.py  test_agent_manager.py  test_agent_tool_payload_names.py  test_agents_command_models.py  test_anthropic_compatible_adapter.py  test_anthropic_oauth_provider.py  test_backend_core_decoupling_chat_entry.py  test_backend_core_decoupling_provider_registry.py  test_backend_core_decoupling_routes.py  test_branch_graph_routing.py  test_branch_runtime_characterization.py  test_builtin_agent_llm_plugin_integration.py  test_builtin_plugin.py  test_builtin_tools_data_utility_plugin_integration.py  test_chat_attachments.py  test_chat_config.py  test_chat_graph_runner_runtime.py  test_chat_runtime_characterization.py  test_content_accumulator.py  test_db_chat_render_plan_normalization.py  test_droid_event_coverage.py  test_e2e_flow.py  test_flow_execution.py  test_flow_migration.py  test_flow_streaming.py  test_graph_executor.py  test_graph_runtime.py  test_http_routes_response_helpers.py  test_model_factory_streaming.py  test_model_schema_cache.py  test_model_selection_settings.py  test_node_plugin_catalog.py  test_node_provider_hot_refresh.py  test_node_provider_model_dedup.py  test_node_provider_plugin_manager.py  test_node_provider_plugins_command.py  test_openai_codex_provider.py  test_openai_compatible_adapter.py  (+22 more)
types/: electrobun.d.ts  idiomorph.d.ts
(+1024 files in other folders)
