[project]
name = "app"  
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pydantic == 2.*",
    "anyio == 4.*",
    "SQLAlchemy >= 2, < 3",
    "openai >= 1.30.0",
    "python-dotenv >= 1.0.1",
    "anthropic >= 0.40.0",
    "groq >= 0.10.0",
    "duckduckgo-search >= 6.0.0",
    "requests >= 2.31.0",
    "docker>=7.1.0",
    "google-genai>=1.47.0",
    "ollama>=0.6.1",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "rich>=14.2.0",
    "litellm>=1.80.10",
    "mcp>=1.24.0",
    "httpx>=0.28.1",
    "zynk",
    "agno>=2.3.20",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.9",
]

[tool.uv.sources]
zynk = { path = "zynk" }
