[project]
name = "app"
version = "0.1.0"
description = "Agno Desktop"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.3.20",
    "agno-toolset",
    "anyio==4.*",
    "cryptography>=46.0.3",
    "duckduckgo-search>=6.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.28.1",
    "litellm>=1.80.10",
    "mcp>=1.24.0",
    "pydantic==2.*",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "rich>=14.2.0",
    "SQLAlchemy>=2,<3",
    "uvicorn[standard]>=0.23.0",
    "zynk",
]

[dependency-groups]
dev = [
    "nuitka",
]

[tool.uv.sources]
zynk = { path = "zynk" }
agno-toolset = { path = "agno-toolset" }

[tool.ruff]
target-version = "py312"
