[project]
name = "app"  
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pydantic == 2.*",
    "anyio == 4.*",
    "SQLAlchemy >= 2, < 3",
    "python-dotenv >= 1.0.1",
    "duckduckgo-search >= 6.0.0",
    "requests >= 2.31.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "rich>=14.2.0",
    "litellm>=1.80.10",
    "mcp>=1.24.0",
    "httpx>=0.28.1",
    "agno>=2.3.20",
    "zynk",
    "agno-toolset",
    "cryptography>=46.0.3",
    "quickjs>=1.19.4",
    "jsonschema>=4.23.0",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.uv.sources]
agno = { git = "https://github.com/SethBurkart123/agno.git", branch = "fix/delegation-error-propagation", subdirectory = "libs/agno" }
agno-toolset = { path = "agno-toolset" }
zynk = { path = "zynk" }

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
