[project]
name = "covalt-toolset"
version = "0.1.0"
description = "SDK for building Covalt toolsets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Covalt" }]
keywords = ["covalt", "toolset", "ai", "tools", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
dev = ["pytest>=7.0", "pydantic>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/covalt_toolset"]

[tool.pytest.ini_options]
testpaths = ["tests"]
